--- a/main.css
+++ b/main.css
@@ -32,6 +32,56 @@ body {
 	user-select: none;
 }
 
+#image_info {
+	position: absolute;
+	opacity: 0.8;
+	width: 30%;
+	height: 70%;
+	top: 20%;
+	left: 65%;
+	
+	/*color: #ffffff;/**/
+	/*background-color:rgba(99,0,0,0.6);/**/
+	z-index: 4;
+	margin: -10px;
+	/*border: none;
+	/*outline:none;
+	/*border-style:none;
+	/*border-bottom:-1px solid #508181;
+	/*outline: 0px solid rgba(200,0,0,1);/**/
+}
+
+
+/*
+#image_container {
+	position: absolute;
+	color: #ffffff;
+	background-color:rgba(0,0,0,0.6);
+	z-index: 4;
+	border: none;
+	outline:none;
+	border-style:none;
+	border-bottom:-1px solid #508181;
+	width: 32%;
+	height: 72%;
+	top: 19%;
+	left: 64%;
+	}
+*/
+
+img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	/*box-sizing: border-box;/**/
+	/*outline: 0px solid rgba(0,0,0,0);/**/
+	/*box-shadow: 0 0px 0 red;
+	border: none;
+	outline:none;
+	border-style:none;
+	border-bottom:-1px solid #508181;*/
+}
+
 .world_container {   
 	/*display: flex;/**/
 	/*justify-content: center;/**/
@@ -218,7 +268,7 @@ section i {
 }
 
 .markers_css {
-  fill: #888888;
+  fill: #ffffff;
   
   stroke-width: 0.05px;
 	user-select: none;
